bus_app_kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: bus-service
spec:
  selector:
    type: bus
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30010
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      type: bus
  template:
    metadata:
      labels:
        type: bus
    spec:
      containers:
      - name: bus-container
        image: ahmedmontasser/backend:busV1
        imagePullPolicy: Always
        workingDir: /bus_app
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 60
          failureThreshold: 3
        ports:
        - containerPort: 5000
