database_kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgress-service
spec:
  selector:
    type: postgress
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      type: postgress
  template:
    metadata:
      labels:
        type: postgress
    spec:
      containers:
      - name: postgress-container
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgress-data
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgress-data
          persistentVolumeClaim:
            claimName: postgress-pvc
