microbus_app_kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbus-service
spec:
  selector:
    type: microbus
  ports:
  - port: 7000
    targetPort: 7000
    nodePort: 30015
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microbus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      type: microbus
  template:
    metadata:
      labels:
        type: microbus
    spec:
      containers:
      - name: microbus-container
        image: ahmedmontasser/backend:microbusV1
        imagePullPolicy: Always
        workingDir: /microbus_app
        livenessProbe:
          httpGet:
            path: /health
            port: 7000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 60
          failureThreshold: 3
        ports:
        - containerPort: 7000
